--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "Billiards Tournament Management App"]
-    path = billiards
-    url = https://github.com/tunnela/billiards-tournament-management-app.git
-    branch = main
+[submodule "billiards-tournament-management-app"]
+	path = billiards-tournament-management-app
+	url = https://github.com/tunnela/billiards-tournament-management-app.git
